# kobo-to-anki

./: .dockerignore  .gitignore  Cargo.toml  README.md
.sqlx/: query-06ee481d042bf93f75074a60088a479d80749833d34b6336c482154b7795b2a5.json  query-21816d23d7d5d9b27a7f6ff10333bde550430cfcac01ff9925d9d769da8897b5.json  query-2c3bbefc15dc892b64a4922ffe080b2f34c5dd4923ac6575faacb3a7b190a3a1.json  query-2d4b5663c61fc9259a589dfac6841e3cc22deb40f257e40c6ab68ef25f3c0336.json  query-70ddc83bad449a209960438405801f736c3d26afd8800e709e5524e4f5369cb7.json  query-b928327047a7d0f298cc63dea90255593cf79a8aac4ddd36747f44d18a041ce0.json
cambridge-words-provider/: Cargo.toml
cambridge-words-provider/sql/: init_messages_db.sql
cambridge-words-provider/src/: lib.rs  main.rs
cambridge-words-provider/src/cloudflare/: ip_adresses.rs  middleware.rs  mod.rs  refresh.rs
cambridge-words-provider/src/configuration/: config.rs  mod.rs
cambridge-words-provider/src/database/: client.rs  mod.rs  postgres_preparation.rs
cambridge-words-provider/src/database/methods/: mod.rs  words_db.rs
cambridge-words-provider/src/logs/: mod.rs  setup.rs
cambridge-words-provider/src/logs/metrics/: mod.rs  prometheus.rs
cambridge-words-provider/src/routes/: mod.rs
cambridge-words-provider/src/routes/word/: cambrinary_bindings.rs  get_word.rs  limiter.rs  mod.rs
kobo-to-anki-sync-tool/: Cargo.toml  server_addr
kobo-to-anki-sync-tool/src/: main.rs
kobo-to-anki-sync-tool/src/anki/: cards.rs  client.rs  mod.rs
kobo-to-anki-sync-tool/src/events/: update_event.rs
kobo-to-anki-sync-tool/src/kobo/: mod.rs  sync.rs
kobo-to-anki-sync-tool/src/layout/: app_layout.rs
