[package]
name = "cambridge-words-provider"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors", "limit"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
tracing = "0.1.40"
mongodb = { version = "3.1.0", features = ["snappy-compression", "zlib-compression", "zstd-compression"] }
config = { version = "0.14.0", features = ["toml"] }
serde = { version = "1.0.209", features = ["derive"] }
anyhow = "1.0.86"
axum-client-ip = "0.6.0"
ipnetwork = { git = "https://github.com/SildCave/ipnetwork" }
reqwest = { version = "0.12.7", features = ["blocking"] }
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.3"
jsonwebtoken = "9.3.0"
serde_json = "1.0.128"
chrono = "0.4.38"
rayon = "1.10.0"
redis = { version = "0.27.1", features = ["tokio-comp", "ahash"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
rand = "0.8.5"
log = "0.4.22"
tower = { version = "0.5.1", features = ["limit", "buffer"] }   
tower_governor = { version = "0.4.2", features = ["axum"] }
governor = "0.6.3"


[profile.release]
lto = "fat"
